<resources>
    <string name="app_name">SinauApp</string>
    <string name="Hey">Hello,</string>
    <string name="welcome_again">Welcome Again!</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="username_email">Username/email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="discover_and_study">Discover And Study</string>
    <string name="discover_the_things_you_want_to">Discover the things you want to learn and</string>
    <string name="together_with_us">Together with us!</string>
    <string name="get_started">Get Started</string>
    <string name="grow_with_us">grow with us!</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up">Sign-up</string>
    <string name="arief_muhammad">Arief Muhammad</string>
    <string name="assignment">Assignment</string>
    <string name="_98">98%</string>
    <string name="attendance">Attendance</string>
    <string name="_10">10</string>
    <string name="hour">hour</string>
    <string name="done">done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_informations">Student Informations</string>
    <string name="nisn">NISN</string>
    <string name="_34521104589099">34521104589099</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="_26_october_2004">26 October 2004</string>
    <string name="grade">Grade</string>
    <string name="school">School</string>
    <string name="nationality">Nationality</string>
    <string name="status">Status</string>
    <string name="indonesian">Indonesian</string>
    <string name="vip_student">VIP Student</string>
    <string name="student_id">Student ID</string>
    <string name="school_information">School Information</string>
    <string name="school_informations">School Informations</string>
    <string name="npsn">NPSN</string>
    <string name="_699987">699987</string>
    <string name="school_name">School name</string>
    <string name="smk_idn_boarding_school">SMK IDN Boarding School</string>
    <string name="location">Location</string>
    <string name="bogor_indonesia">Bogor, Indonesia</string>
    <string name="_12_mipa_a">12 MIPA A</string>
    <string name="principal">Principal</string>
    <string name="mr_sulaiman">Mr. Sulaiman</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="teacher">Teacher</string>
    <string name="mrs_siti_badriyah">Mrs. Siti Badriyah</string>
    <string name="curiculum">Curiculum</string>
    <string name="cambridge">Cambridge</string>
    <string name="accreditation">Accreditation</string>
    <string name="a">A+</string>
</resources>