<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentIDFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="328dp"
            android:layout_height="288dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/radius_informations">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtStudentINF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/student_informations"
                    android:textColor="@color/purple"
                    android:textSize="60px"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgAkar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/akaricon" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/txtNisn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nisn"
                    android:textSize="15dp"
                    android:textColor="@color/purple"
                    android:layout_marginEnd="140dp"/>

                <TextView
                    android:id="@+id/txtCodeNisn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_34521104589099"
                    android:textColor="@color/purple"
                    android:textSize="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textSize="15dp"
                    android:textColor="@color/purple"
                    android:layout_marginEnd="100dp"/>

                <TextView
                    android:id="@+id/txtTanggalLahir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_26_october_2004"
                    android:textColor="@color/purple"
                    android:textSize="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/txtGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade"
                    android:textSize="15dp"
                    android:textColor="@color/purple"
                    android:layout_marginEnd="183dp"/>

                <TextView
                    android:id="@+id/txtKelas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_12_mipa_a"
                    android:textColor="@color/purple"
                    android:textSize="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txtSchool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="77dp"
                    android:text="@string/school"
                    android:textColor="@color/purple"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtSekolah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smk_idn_boarding_school"
                    android:textColor="@color/purple"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/txtSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textSize="15dp"
                    android:textColor="@color/purple"
                    android:layout_marginEnd="235dp"/>

                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/purple"
                    android:textSize="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/txtNationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nationality"
                    android:textSize="15dp"
                    android:textColor="@color/purple"
                    android:layout_marginEnd="150dp"/>

                <TextView
                    android:id="@+id/txtNegara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indonesian"
                    android:textColor="@color/purple"
                    android:textSize="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/txtStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="15dp"
                    android:textColor="@color/purple"
                    android:layout_marginEnd="172dp"/>

                <TextView
                    android:id="@+id/txtJwbnStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vip_student"
                    android:textColor="@color/purple"
                    android:textSize="15dp"/>

            </LinearLayout>


        </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>