<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".OnBoardingActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/img_onboard"
            android:layout_width="360dp"
            android:layout_height="300dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/iconsplash" />

        <TextView
            android:id="@+id/welcomeOnboard"
            android:layout_width="280dp"
            android:layout_height="49dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="90px" />

        <Button
            android:id="@+id/btnSignupOnboard"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:background="@drawable/radius_signup"
            android:text="@string/sign_up"
            android:textSize="50px" />

        <Button
            android:id="@+id/btnLoginOnboard"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/radius_getstarted"
            android:text="@string/login"
            android:textSize="50px" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>